crates/vespertide-exporter/src/django/snapshots/vespertide_exporter__django__tests__basic_table.snap
---
source: crates/vespertide-exporter/src/django/mod.rs
expression: render_entity(&table).unwrap()
---
from __future__ import annotations

from django.db import models


class Users(models.Model):
    """User accounts"""

    id = models.AutoField(primary_key=True)
    email = models.CharField(max_length=255, unique=True)
    name = models.TextField(null=True, blank=True)

    class Meta:
        db_table = "users"
